fix ie input layout issue

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -198,7 +198,7 @@ h3 {
     background:url(/static/mirage_site/images/2.png);
     background-repeat: no-repeat;
     background-position: 0px 5px;
-    width:437px;
+    width:417px;
 
 }
 .select_text    {
